fix: 🩹 update intro text and body alignment

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -21,7 +21,7 @@ $max-content-width: 500px;
 
 .intro-body {
   display: block;
-  text-align: justify;
+  text-align: left;
   line-height: 1.5;
 }
 
